<resources>
    <string name="app_name">Gps Tracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_logo">Gps Tracker</string>
    <string name="title_activity_market">MarketActivity</string>
    <string name="instruction_one">ဆင်းကဒ်နဲ့ဘထ္ထရီကို GPS တွင်တပ်ဆင်ပါ။\n
(မှတ်ချက်။   ။GSM ဆင်းကဒ်များသာရပါမည်။ </string>
    <string name="instruction_two">GPS ရဲ့ on/off  ခလုတ်ကိုမီးပွင့် လာသည် အထိ ၄ ၊ ၅ စက္ကန့်ခန့် ဖိကာ အဆောက်အအုံ ပြင်ပတွင်ထားပါ။\n (မှတ်ချက်။   ။ GPS ရဲ့ ပုံပါတဲ့မျက်နှာပြင်က ကောင်းကင်သို့မျက်နှာမူရပါမည်။ </string>
    <string name="instruction_three">၄၅ စက္ကန့် ကြာပြီးနောက် GPS စတင်အလုပ်လုပ်ပါမည်။</string>
    <string name="instruction_four">GPS ကိုမိမိ ဖုန်းနှင့် ချိတ်ပါမည်။ \n
(မှတ်ချက်။   ။ GPS ပွင့်ပြီးအနည်းဆုံး ၄၅ စက္ကန့်ကြာမှသာ စတင်ဆက်သွယ်ပါ။</string>
    <string name="label_input_simcard_number">GPS မှာတပ်ဆင်ထားသော ဆင်းကဒ်နံပါတ်ထဲ့ပါ။</string>
    <string name="button_connect">ချိတ်ဆက်မယ်</string>
    <string name="label_connect_by_texting">စာပို့ပြီးချိတ်မယ်</string>
    <string name="label_connect_by_phone">ဖုန်းခေါ်ပြီးချိတ်မယ်</string>
    <string name="warning_message_for_texting_connect">မှတ်ချက်။   ။စာပို့ပြီးချိတ်ဆက်မည် ဖြစ်သဖြင့် မိမိဖုန်းတွင်လက်ကျန်ငွေ အလုံအလောက်ရှိရန်လိုအပ်ပါမည်။</string>
    <string name="warning_message_for_phone_connect">မှတ်ချက်။   ။ဖုန်းဘေလ်မဖြတ်ပါ။ miss call ခေါ်ရန်လုံလောက်သောလက်ကျန်ငွေရှိရင်ရပါပြီ။</string>
    <string name="action_settings">Settings</string>
    <string name="hint_sim_number">+959753362189</string>
    <string name="dialog_title_connecting">ချိတ်ဆက်နေသည်…</string>
    <string name="dialog_message_connecting">စက္ကန့် ၃၀ ခန့်ကြာပါမည်။</string>
    <string name="dialog_title_connecting_failed">မအောင်မြင်ပါ။</string>
    <string name="dialog_title_connecting_failed_reason">ဖြစ်နိုင်ခေျများ</string>
<string name="dialog_reason_connecting_failed">-GPS မပွင့်သေးပါ။\n-ပွင့်ပေမဲ့ ၄၅ စက္ကန့်မကြာသေးပါ။\n-ဖုန်းလိုင်းပျက်နေသည်။\n-ဖုန်းဘေလ်မရှိတော့ပါ။\n-GPS မျက်နှာ အပေါ်
လှည့်မနေပါ။</string>
    <string name="label_add_more_gps">GPS ထပ်ပေါင်းမယ်။</string>
    <string name="label_gps_name">နာမည်</string>
    <string name="label_gps_place">နေရာ</string>
    <string name="label_gps_time_last_tracked">နောက်ဆုံးခြေရာခံချိန်</string>
    <string name="label_gps_latitude">လတ္တီတွတ်</string>
    <string name="label_gps_longitude">လောင်တီတွတ်</string>
    <string name="label_action_go_to_map">မြေပုံမှာကြည့်မယ် ></string>
    <string name="title_set_password">လျို့ဝှက်ကုဒ်ထဲ့မယ်</string>
    <string name="title_change_password">လျို့ဝှက်ကုဒ်ပြောင်းမယ်</string>
    <string name="title_remove_password">လျို့ဝှက်ကုဒ်ဖြုတ်မယ်</string>
    <string name="label_enter_password">လျို့ဝှက်ကုဒ်ထဲ့ပါ</string>
    <string name="label_re_enter_password">နောက်တစ်ကြိမ်ထဲ့ပါ</string>
    <string name="label_password">လျို့ဝှက်ကုဒ်</string>
    <string name="button_ok">ကောင်းပြီ</string>
    <string name="label_wrong_password_pattern">နှစ်သက်ရာဂဏန်း၆ လုံးတိတိသာ</string>
    <string name="label_password_mismatch">လျို့ဝှက်ကုဒ်ချင်းမတူပါ</string>
    <string name="label_enter_old_password">လျို့ဝှက်ကုဒ်အဟောင်းထဲ့ပါ</string>
    <string name="label_enter_new_password">လျို့ဝှက်ကုဒ်အသစ်ထဲ့ပါ</string>
    <string name="button_change">ပြောင်းမယ်</string>
    <string name="label_action_forget_password">လျို့ဝှက်ကုဒ်မေ့နေတယ်</string>
    <string name="button_remove">ဖြုတ်မယ်</string>
    <string name="button_cancel">ခဏလေး</string>
    <string name="label_gps_type">အမျိုးအစား</string>
    <string name="label_gps_sim_number">ဆင်းကဒ်နံပါတ်</string>
    <string name="button_fine">ရပြီ</string>
    <string name="label_action_change">ပြောင်းမယ်</string>
    <string name="label_toggle_action_authorized">ဤဖုန်းဖြင့်သာခြေရာခံနိုင်သည်</string>
    <string name="label_toggle_action_un_authorized"> အခြားဖုန်း များဖြင့်လည်း ခြေရာခံနိုင်သည် </string>
    <string name="label_action_locate_gps">အခုဘယ်မှာလဲ >></string>
    <string name="label_with_you">အသင်နှင့်</string>
    <string name="label_located_at_meters_away">မီတာ အကွာတွင်ရှိပါသည်</string>
    <string name="button_later">ေနာက္မှ</string>
    <string name="button_retry">ျပန္ျကိုးစားမယ္</string>
    <string name="label_action_skip"><u>ကျော်မယ် >></u></string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="dialog_title_tracking">ခြေရာခံနေသည်</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="dialog_message_fetching_geo">Fetching geo …</string>
    <string name="lock_image_button_content_description">device is locked by password or not</string>
    <string name="edit_image_button_content_description">edit device detail</string>
    <string name="image_place_content_description">image showing place</string>
    <string name="image_clock_content_description">image showing last tracked time</string>
    <string name="profile_image_content_description">device\'s profile picture</string>
    <string name="title_activity_connect">Connect</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="label_gps_name_default">not set</string>
    <string name="edit_name_content_description">edit device name</string>
    <string name="label_gps_type_default">not set</string>
    <string name="label_gps_authorization">Authorization</string>
    <string name="edit_sim_number_content_description">edit sim number</string>
    <string name="edit_type_content_description">edit type</string>
    <string name="label_gps_sim_number_default">+957654123</string>
    <string name="label_gps_authorization_default">un authorization</string>
    <string name="edit_authorizaiton_content_description">edit authorization</string>
    <string name="title_activity_edit">Edit</string>
    <string name="close_button_content_description">close button</string>
    <string name="edit_text_default_hint">Enter device info</string>
    <string name="label_delete_this_device">Delete this device</string>
    <string name="delete_button_content_description">delete this device</string>
</resources>