<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <mm.technomation.mmtext.MMTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialog_title_connecting_failed"
        android:textColor="@color/colorAccent" />

    <include layout="@layout/include_line" />

    <mm.technomation.mmtext.MMTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_view_padding"
        android:text="@string/dialog_title_connecting_failed_reason"
        android:textColor="@color/colorPrimary" />

    <mm.technomation.mmtext.MMTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_view_padding"
        android:text="@string/dialog_reason_connecting_failed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <mm.technomation.mmtext.MMButtonView
            android:id="@+id/later"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/button_later" />

        <mm.technomation.mmtext.MMButtonView
            android:id="@+id/retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/button_retry" />
    </LinearLayout>

</LinearLayout>